[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-tests"
version = "0.1.0"
description = "Agent deployment using Google GCP and ADK."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Abhinav Yadav", email = ""}]
keywords = ["python"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]
